@@ -1,3 +1,5 @@
+HEAD
+	+ Crash reports can be submitted also with global debug disabled
 4.0.1
 	+ Save changes does redirection after 10 consecutive failed requests
 	+ Hide useless revoke button in OpenChange vdomains table
